--- a/src/main/resources/templates/seller/delivery/search.html
+++ b/src/main/resources/templates/seller/delivery/search.html
@@ -34,8 +34,8 @@
                 viewBox="0 0 16 16">
                 <path
                     d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3c0-.269-.035-.53-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814L1 0Zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708ZM3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026L3 11Z" />
-            </svg> -->
-            <img src="../images/logo1.png" style="width: 80px;"/>
+            </svg> -->            
+            <img src="../../images/logo1.png" style="width: 80px;"/>
             <strong>판매자 페이지</strong>
         </a>
 
@@ -134,14 +134,98 @@
         <div id="layoutContent">
             <main>
                 <div style="padding-left: 15px; padding-top: 30px; padding-right: 15px;">
-                    <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
+                    <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->                                        
+                        <h3>배송 입니다.</h3>
+                        <div>
+                            <div class="row" style ="border: 2px solid rgb(229, 229, 229); margin-bottom: 15px;">                            
+                                    <div class="col-2">
+                                        여백
+                                    </div>
+                                    <div class="col-sm">
+                                        전체
+                                        배송
+                                        배송준비중
+                                        배송중
+                                        배송완료
+                                    </div>
+                                    <div class ="col-2">
+                                        여백
+                                    </div>
+                            </div>
+                            <div class="row" style ="border: 2px solid rgb(229, 229, 229); background-color: rgb(243,245,247);">
+                                상품번호, 물품명, 지역, 공구주문 번호 검색
+                            </div>
+                            <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">
+                                상품상태 들어갈 공간 라디오 박스
+                            </div>
+                            <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">
+                                기간
+                            </div>
+                            <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">
+                                초기화 검색
+                            </div>
+                        </div>  
 
-
-                        <h3>홈입니다.</h3>
-
-
+                            <div class="row" style="margin-top: 15px;">
+                                <div class="col">
+                                    <div class="card mb-4">
+                                        <div class="card-header">
+                                            <i class="fas fa-table me-1"></i>
+                                            테이블 예제
+                                        </div>
+                                        <div class="card-body">
+                                            <table id="datatablesSimple">
+                                                <thead>
+                                                    <tr>
+                                                        <th>물품번호</th>
+                                                        <th>물품이름</th>
+                                                        <th>물품가격</th>
+                                                        <th>물품수량</th>
+                                                        <th>물품소분류코드</th>
+                                                        <th>공동구매횟수</th>
+                                                        <th>물품등록일자</th>
+                                                        <th>상세</th>
+                                                    </tr>
+                                                </thead>
+                                                <tfoot>
+                                                    <tr>
+                                                        <th>물품번호</th>                                                    
+                                                        <th>물품이름</th>
+                                                        <th>물품가격</th>
+                                                        <th>물품수량</th>
+                                                        <th>물품소분류코드</th>
+                                                        <th>공동구매횟수</th>
+                                                        <th>물품등록일자</th>
+                                                        <th>상세</th>
+                                                    </tr>
+                                                </tfoot>
+                                                <tbody>
+                                                    <tr th:each="obj : ${tlist}">                                                    
+                                                        <td th:text="${obj.itemno.longValue()}"></td>
+                                                        <td th:text="${obj.itemname}"></td>
+                                                        <td th:text="${obj.itemprice.longValue()}"></td>
+                                                        <td th:text="${obj.itemquantity.longValue()}"></td>
+                                                        <td th:text="${obj.itemscategory.longValue()}"></td>
+                                                        <td th:text="${obj.count.longValue()}"></td>
+                                                        <td th:text="${#dates.format(obj.itemregdate, 'yyyy년 MM월 dd일 E요일 HH시 mm분')}"></td>                                           
+                                                        <td>
+                                                            <a th:href="@{/seller/item/searchdetail.do(itemno=${obj.itemno})}">
+                                                                <button class="btn btn-primary"
+                                                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
+                                                                        상세
+                                                                </button>
+                                                            </a>
+                                                        </td>
+                                                    </tr>                                            
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                     </div>
                 </div>
+
             </main>
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid py-5">
