--- a/src/main/resources/templates/seller/order/search.html
+++ b/src/main/resources/templates/seller/order/search.html
@@ -137,7 +137,7 @@
                     <div class="container-fluid px-4"> <!-- 옆쪽에 딱 붙음. -->
 
 
-                        <h3>홈입니다.</h3>
+                        <h3>주문 입니다.</h3>
 
 
                     </div>
