--- a/src/main/resources/templates/mj/seller/updateimage.html
+++ b/src/main/resources/templates/mj/seller/updateimage.html
@@ -136,7 +136,7 @@
                 <div class="container-fluid px-4" style="margin: 10px; padding-top: 20px;"> <!-- 옆쪽에 딱 붙음. -->
 
 
-                    <h3>인덱스</h3>                    
+                    <h3>이미지등록/수정</h3>                    
 
 
                 </div>
