5월 22일 비밀번호수정 + 회원정보 수정 기능 추가

--- a/src/main/resources/templates/jk/seller/findpw.html
+++ b/src/main/resources/templates/jk/seller/findpw.html
@@ -11,8 +11,8 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
-<body style="margin-top: 60px">
-    <div style="width: 600px; margin: 0 auto; padding: 50px; border: 1px solid #efefef;">
+<body style="margin-top: 60px;">
+    <div style="width: 560px; margin: 0 auto; padding: 45px; padding-bottom: 30px; border: 1px solid #e2e2e2; background-color:rgb(255, 255, 255); border-radius: 0.7rem;">
         <div class="text-center">
             <img th:src="@{/images/jk/logo1.png}" name="soboon" style="height: 150px;">
             <br />
