--- a/src/main/resources/templates/jk/seller/join.html
+++ b/src/main/resources/templates/jk/seller/join.html
@@ -12,12 +12,12 @@
 </head>
 
 <body style="margin-top: 60px">
-    <div style="width: 600px; margin: 0 auto; padding: 50px; border: 1px solid #efefef;">
+    <div style="width: 560px; margin: 0 auto; padding: 45px; padding-bottom: 30px; border: 1px solid #e2e2e2; background-color:rgb(255, 255, 255); border-radius: 0.7rem;">
         <div class="text-center">
             <img th:src="@{/images/jk/logo1.png}" name="soboon" style="height: 150px;">
             <br />
         </div>
-        <form th:action="@{/seller/join.do}" method="post">
+        <form id="form" th:action="@{/seller/join.do}" method="post">
             <div class="row">
                 <div class="col-sm">
                     <hr />
@@ -67,7 +67,7 @@
                     <hr />
                     <div class="container text-center d-grid gap-2" style="padding: 0;">
                         <!-- 여기서 type을 submit으로 잡고 유효성 검사를 하게되면 강제로 데이터가 넘어가기 때문에 button으로 지정해주어야 함! -->
-                        <input type="submit" value="가입하기" class="btn btn-dark"  /> 
+                        <input type="button" value="가입하기" class="btn btn-dark" onclick="joinAction()" /> 
                         <a th:href="@{/seller/login.do}" class="btn btn-outline-secondary">로그인 화면으로</a>
                     </div>
                 </div>
@@ -89,137 +89,70 @@
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
     <script>
-        // function joinAction() {
-        //     const id = document.getElementById('id');
-        //     const pw = document.getElementById('pw');
-        //     const pw1 = document.getElementById('pw1');
-        //     const name = document.getElementById('name')
-        //     const phone = document.getElementById('phone');
-        //     const email = document.getElementById('email');
-        //     const address = document.getElementById('address1');
+        function joinAction() {
+            //변수에 담아주기
+            var id = document.getElementById("id");
+            var pw = document.getElementById("pw");
+            var pw1 = document.getElementById("pw1");
+            var name = document.getElementById("name");
+            var email = document.getElementById("email");
+            var sample6_postcode = document.getElementById("sample6_postcode");
+            var form = document.getElementById("form");
 
-        //     if (id.value.length <= 0) {
-        //         Swal.fire({
-        //             icon: 'warning',
-        //             title: '아이디를 입력하지 않았어요',
-        //             text: '아이디는 어디로 간거죠..?',
-        //             showConfirmButton: true,
-        //             timer: 2500
-        //         });
-        //         id.focus();
-        //         return false; // 함수종료, 전송하지 않음
-        //     }
 
-        //     // if (idcheck === 0) {
-        //     //     Swal.fire({
-        //     //         icon: 'warning',
-        //     //         title: '이미 사용중인 아이디네요!',
-        //     //         text: '이런.. 이 멋진걸 누군가 이미 선점했나 보네요.',
-        //     //         showConfirmButton: true,
+            if (id.value == "") { // 해당 입력값이 없을 경우 같은말: if(!id.value)
+                alert("아이디를 입력해주세요.");
+                id.focus(); //focus(): 커서가 깜빡이는 현상, blur(): 커서가 사라지는 현상
+                return false; //return: 반환하다 return false:  아무것도 반환하지 말아라 아래 코드부터 아무것도 진행하지 말것
+            };
 
-        //     //     });
-        //     //     id.focus();
-        //     //     return false;
-        //     // }
+            if (pw.value == "") { // 암호가 입력됐는지
+                alert("비밀번호를 입력해주세요.");
+                pw.focus();
+                return false;
+            };
 
-        //     if (pw.value.length <= 0) {
-        //         Swal.fire({
-        //             icon: 'error',
-        //             title: '패스워드를 입력하지 않았어요',
-        //             text: '패스워드는 어디로 간거죠..?',
-        //             showConfirmButton: true,
-        //         });
-        //         pw.focus();
-        //         return false; // 함수종료, 전송하지 않음
-        //     }
+            if (pw.value == "") { // 암호가 입력됐는지
+                alert("비밀번호 확인을 입력해주세요.");
+                pw.focus();
+                return false;
+            };
 
-        //     if (pw.value.length <= 7) {
-        //         Swal.fire({
-        //             icon: 'warning',
-        //             title: '패스워드가 너무 짧아요!',
-        //             text: '적어도 8자리 정도는 되어야 할 것 같아요.',
-        //             showConfirmButton: true,
+            //비밀번호 영문자+숫자+특수조합(8~25자리 입력) 정규식
+            var pwCheck = /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,25}$/;
 
-        //         });
-        //         pw.focus();
-        //         return false; // 함수종료, 전송하지 않음
-        //     }
+            if (!pwCheck.test(pw.value)) { // 암호와 암호재확인값이 일치하는지
+                alert("비밀번호는 영문자+숫자+특수문자 조합으로 8~25자리 사용해야 합니다.");
+                pw.focus();
+                return false;
+            };
 
-        //     if (pw1.value.length <= 0) {
-        //         Swal.fire({
-        //             icon: 'error',
-        //             title: '패스워드 확인창이 비어있어요!',
-        //             text: '패스워드를 한번 더 입력해주세요.',
-        //             showConfirmButton: true,
+            if (pw1.value !== pw.value) { // 암호가 서로 일치하는지
+                alert("비밀번호가 서로 일치하지 않습니다.");
+                pw1.focus();
+                return false;
+            };
 
-        //         });
-        //         pw1.focus();
-        //         return false; // 함수종료, 전송하지 않음
-        //     }
+            if (name.value == "") { // 이름이 입력됐는지
+                alert("업체 이름을 입력해주세요.");
+                name.focus();
+                return false;
+            };
 
-        //     if (pw.value !== pw1.value) {
-        //         Swal.fire({
-        //             icon: 'warning',
-        //             title: '패스워드가 일치하지 않아요!',
-        //             text: '흠.. 다시 한번 확인해야할 것 같네요.',
-        //             showConfirmButton: true,
+            if (email.value == "") { // 이메일이 입력됐는지
+                alert("이메일 주소를 입력해주세요.");
+                email.focus();
+                return false;
+            }
 
-        //         });
-        //         pw1.focus();
-        //         return false;
-        //     }
-
-        //     if (name.value.length <= 0) {
-        //         Swal.fire({
-        //             icon: 'error',
-        //             title: '이름을 입력하지 않았어요!',
-        //             text: '저희가 뭐라고 불러드리면 좋을까요?',
-        //             showConfirmButton: true,
-
-        //         });
-        //         name.focus();
-        //         return false;
-        //     }
-
-        //     if (phone.value.length <= 0) {
-        //         Swal.fire({
-        //             icon: 'error',
-        //             title: '전화번호를 입력하지 않았어요!',
-        //             text: '전화번호를 입력해주세요!',
-        //             showConfirmButton: true,
-
-        //         });
-        //         phone.focus();
-        //         return false;
-        //     }
-
-        //     if (email.value.length <= 0) {
-        //         Swal.fire({
-        //             icon: 'error',
-        //             title: '이메일을 입력하지 않았어요!',
-        //             text: '이메일을 입력해주세요!',
-        //             showConfirmButton: true,
-
-        //         });
-        //         email.focus();
-        //         return false;
-        //     }
-
-        //     if (address.value.length <= 0) {
-        //         Swal.fire({
-        //             icon: 'error',
-        //             title: '주소를 입력하지 않았어요!',
-        //             text: '주소를 입력해주세요!',
-        //             showConfirmButton: true,
-
-        //         });
-        //         address.focus();
-        //         return false;
-        //     }
-
-            // form의 내용을 button을 눌러 강제로 submit 수행!
-        //     document.getElementById('form').submit();
-        // }
+            if (sample6_postcode.value == "") { // 주소가 입력됐는지 (adr1과 adr2는 한번에 같이 입력되기때문에 adr1만 체크.)
+                alert("업체 주소를 입력해주세요.");
+                sample6_postcode.focus();
+                return false;
+            }
+            //입력 값 전송
+            form.submit(); //유효성 검사의 포인트   
+        }
 
 
         function sample6_execDaumPostcode() {
