--- a/src/main/resources/templates/jk/seller/login.html
+++ b/src/main/resources/templates/jk/seller/login.html
@@ -16,7 +16,7 @@
 </head>
 
 <body style="margin-top: 60px">
-    <div style="width: 600px; margin: 0 auto; padding: 50px; border: 1px solid #efefef;">
+    <div style="width: 560px; margin: 0 auto; padding: 45px; padding-bottom: 30px; border: 1px solid #e2e2e2; background-color:rgb(255, 255, 255); border-radius: 0.7rem;">
         <div class="text-center">
             <img th:src="@{/images/jk/logo1.png}" name="soboon" style="height: 150px;">
         </div>
